@@ -1,3 +1,8 @@
+2007-05-25  Brady Anderson <banderso@novell.com> 
+
+	* Banter/Conversation.cs: changes to status system messages - took out
+	  the two message change
+
 2007-05-25  Boyd Timothy <btimothy@gmail.com> 
 
 	* data/banter.schemas.in, Banter/Preferences.cs: Stubbing out some code
